style: fix overflow issue with footer

--- a/src/components/FooterParent/FooterParent.css
+++ b/src/components/FooterParent/FooterParent.css
@@ -45,6 +45,7 @@ html {
   /* Set the fixed height of the footer here */
   color: #ffffff;
   font-family: "Cabin", sans-serif;
+  overflow: auto;
 }
 
 div.Footer-content {
